--- a/templates/dashboard/plant/plant.html.twig
+++ b/templates/dashboard/plant/plant.html.twig
@@ -31,7 +31,7 @@
     <br>
     <a href="{{ path('dashboard_plants') }}">back to list</a>
     || 
-    <a href="{{ path('dashboard_plants_edit', {'id': plant.id}) }}">edit</a> 
+    <a href="{{ path('dashboard_plant_edit', {'id': plant.id}) }}">edit</a> 
     
     {{ include('dashboard/_partials/_plant-delete-form.html.twig') }}
 
