--- a/templates/dashboard/picture/new.html.twig
+++ b/templates/dashboard/picture/new.html.twig
@@ -11,14 +11,14 @@
     {% endfor %}
 {% endblock %}
 
-{% block title %}New Plant{% endblock %}
+{% block title %}New Picture{% endblock %}
 
 {% block body %}
+    <h1>Create new Picture</h1>
 
-<a href="{{ path('dashboard_index') }}">back to dashboard</a>
+    {{ include('dashboard/_partials/_picture-form.html.twig', {'button_label': 'ALEA JACTA EST'}) }}
 
-    <h1>Create new Plant</h1>
-
-    {{ include('dashboard/_partials/_plant-new-form.html.twig', {'button_label': 'ALEA JACTA EST'}) }}
+    {% set route_parameters = app.request.attributes.get('_route_params') %}
+    <a href="{{ path('dashboard_plant_pictures', {'plantId' : route_parameters.plantId}) }}">back to plant photos</a>
 
 {% endblock %}
