--- a/templates/dashboard/plant/edit.html.twig
+++ b/templates/dashboard/plant/edit.html.twig
@@ -20,7 +20,7 @@
 
     <a href="{{ path('dashboard_plants') }}">back to list</a>
      || 
-    <a href="{{ path('dashboard_plants_show', {'id': plant.id}) }}">back to plant infos</a>
+    <a href="{{ path('dashboard_plant_show', {'id': plant.id}) }}">back to plant infos</a>
     
     {{ include('dashboard/_partials/_plant-delete-form.html.twig') }}
 
