routes -spring cleaning

--- a/templates/dashboard/picture/index.html.twig
+++ b/templates/dashboard/picture/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <a href="{{ path('dashboard_index') }}"> Back to dashboard</a> || <a href="{{ path('dashboard_plants') }}">back to list</a>
+    <br><br><a href="{{ path('dashboard_plants') }}">back to plant list</a>
 
     <h1>Pictures of {{ currentPlant.name }}</h1>
 
