--- a/templates/dashboard/picture/edit.html.twig
+++ b/templates/dashboard/picture/edit.html.twig
@@ -22,7 +22,7 @@
     <a href="{{ path('dashboard_picture_show', {'plantId' : currentPlant.id, 'id': picture.id}) }}">back to picture infos</a>  
     ||
     {% set route_parameters = app.request.attributes.get('_route_params') %}
-    <a href="{{ path('dashboard_plant_pictures', {'plantId' : route_parameters.plantId}) }}">back to plant photos</a>
+    <a href="{{ path('dashboard_plant_pictures', {'plantId' : route_parameters.plantId}) }}">back to {{currentPlant.name}} photos</a>
     
     {{ include('dashboard/_partials/_picture-delete-form.html.twig') }}
 {% endblock %}
