--- a/templates/dashboard/picture/show.html.twig
+++ b/templates/dashboard/picture/show.html.twig
@@ -16,7 +16,7 @@
 {% block body %}
     {% set route_parameters = app.request.attributes.get('_route_params') %}    
     
-    <h1>Picture</h1>
+    <h1>Picture of {{currentPlant.name}}</h1>
     {# mettre directement la photo, ou le nom s'il y en a un ?  #}
 
     <table class="table">
@@ -47,7 +47,7 @@
             </tr>
             
             <tr>
-                {#♥ VIEW PICTURE si plus d'une plante afficher :  #}
+                {#♥ VIEW PICTURE comment je fais si je veux ça uniquement quand il y a plus d'une plante sur la photo :  #}
                 <th>Other plants in this picture</th>
                 <td>
                     {% for plant in picture.plants %}
@@ -59,10 +59,12 @@
             </tr>
         </tbody>
     </table>
-    <a href="{{ path('dashboard_plant_pictures', {'plantId' : currentPlant.id}) }}">back to plant photos</a>
-
-    <a href="{{ path('dashboard_picture_edit', {'plantId' : currentPlant.id, 'id': picture.id}) }}">edit</a>
     
+    <br>
+    <a href="{{ path('dashboard_plant_pictures', {'plantId' : currentPlant.id}) }}">back to {{currentPlant.name}} photos</a>
+    ||
+    <a href="{{ path('dashboard_picture_edit', {'plantId' : currentPlant.id, 'id': picture.id}) }}">edit infos</a>
+    <br><br>
     {{ include('dashboard/_partials/_picture-delete-form.html.twig') }}
 
 {% endblock %}
