--- a/templates/dashboard/plant/edit.html.twig
+++ b/templates/dashboard/plant/edit.html.twig
@@ -11,17 +11,17 @@
     {% endfor %}
 {% endblock %}
 
-{% block title %}Edit Plant{% endblock %}
+{% block title %}Edit {{plant.name}}{% endblock %}
 
 {% block body %}
-    <h1>Edit Plant</h1>
+    <h1>Edit {{plant.name}}</h1>
 
     {{ include('dashboard/_partials/_plant-edit-form.html.twig', {'button_label': 'CUITAS LAS CAROTTAS'}) }}
-
-    <a href="{{ path('dashboard_plants') }}">back to list</a>
+    <br>
+    <a href="{{ path('dashboard_plants') }}">back to plant list</a>
      || 
-    <a href="{{ path('dashboard_plant_show', {'id': plant.id}) }}">back to plant infos</a>
-    
+    <a href="{{ path('dashboard_plant_show', {'id': plant.id}) }}">see {{plant.name}} infos</a>
+    <br><br>
     {{ include('dashboard/_partials/_plant-delete-form.html.twig') }}
 
 {% endblock %}
