--- a/templates/dashboard/plant/new.html.twig
+++ b/templates/dashboard/plant/new.html.twig
@@ -15,10 +15,10 @@
 
 {% block body %}
 
-<a href="{{ path('dashboard_index') }}">back to dashboard</a>
 
     <h1>Create new Plant</h1>
 
     {{ include('dashboard/_partials/_plant-new-form.html.twig', {'button_label': 'ALEA JACTA EST'}) }}
 
+    <br> <a href="{{ path('dashboard_plants') }}">back to plant list</a>
 {% endblock %}
