--- a/templates/dashboard/picture/show.html.twig
+++ b/templates/dashboard/picture/show.html.twig
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <th>File</th>
-                <td>{{ picture.file }}</td>
+                <td><img src="{{ asset('uploads/pictures/' ~ picture.file ) }}"/></td>
             </tr>
             <tr>
                 <th>Is_cover</th>
