--- a/templates/dashboard/plant/index.html.twig
+++ b/templates/dashboard/plant/index.html.twig
@@ -11,7 +11,9 @@
     <table class="table">
         <thead>
             <tr>
+                <!-- TODO id plant list ?
                 <th>Id</th>
+                -->
                 <th>Name</th>
                 <th>Description</th>
                 <th>Date</th>
@@ -28,8 +30,8 @@
                 <td>{{ plant.date ? plant.date|date('Y-m-d') : '' }}</td>
                <td>
                 <a href="{{ path('dashboard_plant_show', {'id': plant.id}) }}">show</a> 
-                || <a href="{{ path('dashboard_plant_edit', {'id': plant.id}) }}">edit</a> 
-                || <a href="{{ path('dashboard_plant_pictures', {'plantId': plant.id}) }}">photos</a>
+                <a href="{{ path('dashboard_plant_edit', {'id': plant.id}) }}">edit</a> 
+                <a href="{{ path('dashboard_plant_pictures', {'plantId': plant.id}) }}">photos</a>
 
                 </td>
                 <td>
