--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -3,12 +3,14 @@
     <head>
         {{ include('_partials/_head.html.twig') }}
     </head>
-    <body>
-        <!-- REMINDER TWIG partial inclusion -->
-        {{ include('_partials/components/_navbar.html.twig') }}
+    <div id="main">
+        <body>
+            <!-- REMINDER TWIG partial inclusion -->
+            {{ include('_partials/components/_navbar.html.twig') }}
 
-        {% block flash %}{% endblock %}
-        {% block body %}{% endblock %}
-    </body>
+            {% block flash %}{% endblock %}
+            {% block body %}{% endblock %}
+        </body>
+    </div>
 
 </html>
