--- a/templates/_partials/_head.html.twig
+++ b/templates/_partials/_head.html.twig
@@ -4,12 +4,33 @@
    and uncomment the following Encore helpers to start using Symfony UX #}
 {% block stylesheets %}
     {#{{ encore_entry_link_tags('app') }}#}
+
+    
+    <!-- TIPS DATATABLE jquery integration -->
+    <link rel="stylesheet" href="//cdn.datatables.net/1.11.0/css/jquery.dataTables.min.css"/> 
+
+    <link rel="stylesheet" href="{{ asset('css/_reset.css') }}"/> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/> 
+    
+    <link rel="stylesheet" href="{{ asset('css/_variables.css') }}"/> 
     <link rel="stylesheet" href="{{ asset('css/default.css') }}"/> 
+
+    <link rel="stylesheet" href="{{ asset('css/_components.css') }}"/> 
     <link rel="stylesheet" href="{{ asset('css/entities-list.css') }}"/> 
+    <link rel="stylesheet" href="{{ asset('css/theme-default.css') }}"/> 
 {% endblock %}
 
 {% block javascripts %}
     {#{{ encore_entry_script_tags('app') }}#}
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!-- TIPS DATATABLE jquery integration -->
+    <script src="//cdn.datatables.net/1.11.0/js/jquery.dataTables.min.js"></script>
+
     <script  src="{{ asset('js/main.js') }}"></script>
+
+
+
+
 {% endblock %}
