--- a/templates/dashboard/picture/index.html.twig
+++ b/templates/dashboard/picture/index.html.twig
@@ -5,43 +5,76 @@
 {% endblock %}
 
 {% block body %}
-    <br><br><a href="{{ path('dashboard_plants') }}">back to plant list</a>
+    
 
     <h1>Pictures of {{ currentPlant.name }}</h1>
 
-    <a href="{{ path('dashboard_picture_new', {'plantId' : currentPlant.id}) }}">Create new</a>
+    <section class="menu">
+        <a href="{{ path('dashboard_plants') }}">back to plant list</a>
+        <a href="{{ path('dashboard_picture_new', {'plantId' : currentPlant.id}) }}">Create new</a>
+    </section>
 
+    <section class="plant__pictures">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Date</th>
-                <th>File</th>
-                <th>Like_counter</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
         {% for picture in pictures %}
-            <tr>
-                <td>{{ picture.name }}</td>
-                <td>{{ picture.description }}</td>
-                <td>{{ picture.date ? picture.date|date('Y-m-d') : '' }}</td>
-                <td>{{ picture.file }}</td>
-                <td>{{ picture.likeCounter }}</td>
-                <td>
-                    <a href="{{ path('dashboard_picture_show', {'plantId' : currentPlant.id, 'id': picture.id}) }}">show</a>
-                    <a href="{{ path('dashboard_picture_edit', {'plantId' : currentPlant.id, 'id': picture.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="10">no records found</td>
-            </tr>
+            <figure class="picture" style="background-image: url({{ asset('uploads/pictures/' ~ picture.file ) }})">
+                <img src="{{ asset('uploads/pictures/' ~ picture.file ) }}"/>
+                <figcaption class="picture__meta">
+                    <h3 class="meta__caption">{{ picture.name }}</h3>
+                    <div class="meta__actions">
+                        <a class="button--icon" href="{{ path('dashboard_picture_show', {'plantId' : currentPlant.id, 'id': picture.id}) }}">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        <a class="button--icon" href="{{ path('dashboard_picture_edit', {'plantId' : currentPlant.id, 'id': picture.id}) }}">
+                            <i class="fas fa-pen"></i>
+                        </a>
+
+                        <a class="button--icon" href="{{ path('dashboard_plant_setcover', {'plantId' : currentPlant.id, 'pictureId': picture.id}) }}" title="Set as cover">
+                            <i class="fas fa-bullseye"></i>
+                        </a>
+                        
+
+                    </div>
+                </figcaption>
+
+            </figure>
         {% endfor %}
-        </tbody>
-    </table>
+
+
+        <!--
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Date</th>
+                    <th>File</th>
+                    <th>Like_counter</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for picture in pictures %}
+                <tr>
+                    <td>{{ picture.name }}</td>
+                    <td>{{ picture.description }}</td>
+                    <td>{{ picture.date ? picture.date|date('Y-m-d') : '' }}</td>
+                    <td>{{ picture.file }}</td>
+                    <td>{{ picture.likeCounter }}</td>
+                    <td>
+                        <a href="{{ path('dashboard_picture_show', {'plantId' : currentPlant.id, 'id': picture.id}) }}">show</a>
+                        <a href="{{ path('dashboard_picture_edit', {'plantId' : currentPlant.id, 'id': picture.id}) }}">edit</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="10">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        //-->
+    </section>
 
 {% endblock %}
