--- a/templates/dashboard/plant/index.html.twig
+++ b/templates/dashboard/plant/index.html.twig
@@ -8,7 +8,7 @@
 
     <a href="{{ path('dashboard_plant_new') }}">Add a plant</a>
 
-    <table class="table">
+    <table class="table" id="plants-list">
         <thead>
             <tr>
                 <th>Name</th>
