--- a/templates/dashboard/_partials/_picture-new-form.html.twig
+++ b/templates/dashboard/_partials/_picture-new-form.html.twig
@@ -1,4 +1,9 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+    {{ form_row(form.name) }}
+    {{ form_row(form.description) }}
+    {{ form_row(form.date) }}
+    {{ form_row(form.file) }} 
+    {{ form_row(form.plants) }}
+
     <button class="btn">{{ button_label|default('Update') }}</button>
 {{ form_end(form) }}
