--- a/templates/dashboard/picture/edit.html.twig
+++ b/templates/dashboard/picture/edit.html.twig
@@ -11,7 +11,7 @@
     {% endfor %}
 {% endblock %}
 
-{% block title %}Edit Picture{% endblock %}
+{% block title %}Edit picture{% endblock %}
 
 {% block body %}
     <h1>Edit Picture</h1>
