--- a/templates/dashboard/plant/index.html.twig
+++ b/templates/dashboard/plant/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'default.html.twig' %}
 
-{% block title %}Plant index{% endblock %}
+{% block title %} My plants{% endblock %}
 
 {% block body %}
 
