--- a/templates/dashboard/profile-edit.html.twig
+++ b/templates/dashboard/profile-edit.html.twig
@@ -1,6 +1,8 @@
 {% extends 'default.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}
+    Edit my profile
+{% endblock %}
 
 {% block flash %}
     {# read and display all flash messages #}
