--- a/public/css/themes/_default.css
+++ b/public/css/themes/_default.css
@@ -15,6 +15,7 @@
     */
     --color-lightest: #f6efd0;
     --color-medium: #805b49;
+    --color-darkest: #000;
 
 
 
@@ -27,6 +28,7 @@
 
     --spacing-default: 1rem;
     --spacing-smallest: calc(var(--spacing-default) / 3);
+    --spacing-biggest: calc(var(--spacing-default) * 3);;
 
     
     --gutter-default: var(--spacing-default);
@@ -38,7 +40,7 @@
     --border-default : solid var(--border-width-default) var(--color-darkest);
 
     --border-radius-default: var(--spacing-default);
-    --border-radius-small: calc(var(--spacing-default) / 2);
+    --border-radius-small: 4px;
 
     --font-fancy-00: 'Baloo Paaji 2', cursive;
 
