--- a/templates/_partials/components/_footer.html.twig
+++ b/templates/_partials/components/_footer.html.twig
@@ -1,39 +1,15 @@
 <footer class="ftco-footer ftco-bg-dark ftco-section">
     <div class="container px-md-5">
-      <div class="row mb-5">
+      <div class="row">
+
         <div class="col-md">
-          <div class="ftco-footer-widget mb-4 ml-md-4">
-            <h2 class="ftco-heading-2">Recent Photos</h2>
-            <ul class="list-unstyled photo">
-              <li><a href="#" class="img" style="background-image: url({{ asset('theme/images/image_1.jpg') }});"></a></li>
-              <li><a href="#" class="img" style="background-image: url({{ asset('theme/images/image_2.jpg') }});"></a></li>
-              <li><a href="#" class="img" style="background-image: url({{ asset('theme/images/image_3.jpg') }});"></a></li>
-              <li><a href="#" class="img" style="background-image: url({{ asset('theme/images/image_4.jpg') }});"></a></li>
-              <li><a href="#" class="img" style="background-image: url({{ asset('theme/images/image_5.jpg') }});"></a></li>
-              <li><a href="#" class="img" style="background-image: url({{ asset('theme/images/image_6.jpg') }});"></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Archives</h2>
-            <ul class="list-unstyled categories">
-                <li><a href="#">November 2018 <span>(105)</span></a></li>
-                <li><a href="#">October 2018 <span>(212)</span></a></li>
-              <li><a href="#">September 2018 <span>(150)</span></a></li>
-              <li><a href="#">August 2018 <span>(100)</span></a></li>
-              <li><a href="#">July 2018 <span>(200)</span></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Have a Questions?</h2>
-              <div class="block-23 mb-3">
+          <div class="ftco-footer-widget">
+              <h2 class="ftco-heading-2">About lettuce seed</h2>
+              <div class="block-23">
                 <ul>
-                  <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+                  <li><span class="icon icon-map-marker"></span><span class="text">Technologies used</span></li>
+                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">Github repository</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">Contact me</span></a></li>
                 </ul>
               </div>
           </div>
@@ -68,6 +44,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <script src="{{ asset('theme/js/bootstrap-datepicker.js') }}"></script>
   
   <script src="{{ asset('theme/js/scrollax.min.js') }}"></script>
-    
+
+  <script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
 
   <script src="{{ asset('theme/js/main.js') }}"></script>
