--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'default.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}
+    Dashboard
+{% endblock %}
 
 {% block body %}
     <h1>Welcome {{ user.username }}</h1>
