--- a/templates/dashboard/picture/show.html.twig
+++ b/templates/dashboard/picture/show.html.twig
@@ -11,7 +11,7 @@
     {% endfor %}
 {% endblock %}
 
-{% block title %}Picture{% endblock %}
+{% block title %}Picture of {{currentPlant.name}}{% endblock %}
 
 {% block body %}
     {% set route_parameters = app.request.attributes.get('_route_params') %}    
@@ -57,10 +57,10 @@
     </table>
     
     <br>
-    <a href="{{ path('dashboard_plant_pictures', {'plantId' : currentPlant.id}) }}">back to {{currentPlant.name}} photos</a>
-    ||
-    <a href="{{ path('dashboard_picture_edit', {'plantId' : currentPlant.id, 'id': picture.id}) }}">edit infos</a>
-    <br><br>
+    <a class="button" href="{{ path('dashboard_plant_pictures', {'plantId' : currentPlant.id}) }}">back to {{currentPlant.name}} photos</a>
+    
+    <a class="button" href="{{ path('dashboard_picture_edit', {'plantId' : currentPlant.id, 'id': picture.id}) }}">edit infos</a>
+ 
     {{ include('dashboard/_partials/_picture-delete-form.html.twig') }}
 
 {% endblock %}
