--- a/templates/openspace/index.html.twig
+++ b/templates/openspace/index.html.twig
@@ -1,16 +1,34 @@
 {% extends 'default.html.twig' %}
 
+{% block title %}
+    Home
+{% endblock %}
+
 {% block body %}
 
 
 
+<section class="blabla">
+    <h2>What is it ?</h2>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem molestiae et sapiente numquam, tempora minima quia, cumque maxime nisi quos dolore voluptatum fugiat laboriosam deleniti nam ab? Perspiciatis, laudantium sequi? Architecto corporis distinctio laboriosam qui blanditiis quo, impedit maxime exercitationem consequuntur atque ex animi fugiat similique, minima ipsum ea voluptates amet officiis nihil nobis iusto accusamus! Maiores cupiditate minima dolore numquam quasi pariatur sunt! Accusamus, voluptates minus! Quod velit ab nihil repellat sint mollitia necessitatibus vitae dignissimos rerum praesentium nesciunt exercitationem voluptates blanditiis modi consequuntur, ea, odio molestiae impedit, autem unde. Cumque, culpa officiis. Impedit autem adipisci ut porro reprehenderit, quisquam molestias cupiditate nesciunt odit quidem, eum dolores temporibus incidunt inventore? Dolor fuga odit harum alias fugit rem ea! Magni aut provident numquam at omnis, commodi aliquid velit possimus placeat distinctio necessitatibus iusto officia alias unde reprehenderit explicabo natus perspiciatis. Alias ea magni veritatis voluptate, facilis impedit similique voluptatibus deleniti?
 
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    <div class="cta">(pas de bouton, on est connecté)</div>
+    {% else %}
+    <div class="cta">
+        <a href="{{ path('member_signup') }}" class="button">Sign up</a>
+    </div>
+    {% endif %}
+</section>
+
+
+<hr/>
 
 <section class="ftco-section instagram">
     <div class="container">
         <div class="row justify-content-center mb-2 pb-3">
             <div class="col-md-7 heading-section heading-section-2 text-center ftco-animate fadeInUp ftco-animated">
-                <h2 class="mb-4">Last posted pictures</h2>
+                <h2 class="mb-4">Our last posted pictures</h2>
             </div>
         </div>
         <div class="row no-gutters">
@@ -18,7 +36,7 @@
 
             {% for picture in  lastCreatedPictures %}  
                 <div class="col-sm-12 col-md ftco-animate fadeInUp ftco-animated">
-                    <a href="#" class="insta-img"
+                    <a href="#" class="insta-img thumbnail"
                         style="background-image: url({{ asset('uploads/pictures/' ~ picture.file) }});">
                         <div class="icon d-flex justify-content-center">
                             <i class="align-self-center fas fa-seedling fa-3x"></i>
@@ -31,11 +49,13 @@
     </div>
 </section>
 
+<hr/>
+
 <section class="ftco-section instagram">
     <div class="container">
         <div class="row justify-content-center mb-2 pb-3">
             <div class="col-md-7 heading-section heading-section-2 text-center ftco-animate fadeInUp ftco-animated">
-                <h2 class="mb-4">Last registered user</h2>
+                <h2 class="mb-4">Our last registered users</h2>
             </div>
         </div>
         <div class="row no-gutters">
@@ -63,6 +83,7 @@
 </section>
 
 
+<!--
 <div class="user-list">
     {% for user in lastCreatedUsers %}
     <span class="user-list-item">
@@ -70,5 +91,6 @@
     </span>
     {% endfor %}
 </div>
+//-->
 
 {% endblock %}
