--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,8 @@
 {% extends 'default.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}
+    Login
+{% endblock %}
 
 {% block body %}
 <form method="post">
