--- a/templates/dashboard/_partials/_picture-edit-form.html.twig
+++ b/templates/dashboard/_partials/_picture-edit-form.html.twig
@@ -10,7 +10,7 @@
         {# {% endif %} #}
     {{ form_row(form.plants) }}
 
-    <button class="btn">{{ button_label|default('Update') }}</button>
+    <button class="button">{{ button_label|default('Update') }}</button>
    
 {{ form_end(form) }}
 </div>
