--- a/templates/member/_signup-form.html.twig
+++ b/templates/member/_signup-form.html.twig
@@ -1,4 +1,6 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    {{ form_row(form.email) }}
+    {{ form_row(form.username) }}
+    {{ form_row(form.password) }} 
+    <button class="button">{{ button_label|default('Submit') }}</button>
 {{ form_end(form) }}
