--- a/templates/dashboard/_partials/_plant-new-form.html.twig
+++ b/templates/dashboard/_partials/_plant-new-form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Update') }}</button>
+    <button class="button">{{ button_label|default('Update') }}</button>
     
 {{ form_end(form) }}
 
