--- a/templates/dashboard/plant/index.html.twig
+++ b/templates/dashboard/plant/index.html.twig
@@ -48,7 +48,7 @@
                 {% endif %}
 
                 <!--LATER PLANT VIEW ajouter les 3 dernières photos de chaque plante ? -->
-                <td data-order="{{ plant.name|slug }}" class="plant__info" onclick="document.location='{{ path('dashboard_plant_pictures', {'plantId': plant.id}) }}'">
+                <td data-order="{{ plant.name|slugify }}" class="plant__info" onclick="document.location='{{ path('dashboard_plant_pictures', {'plantId': plant.id}) }}'">
                     <div class="container">
                         <div class="plant__name">
                             <h4><a class="" href="{{ path('dashboard_plant_pictures', {'plantId': plant.id}) }}">{{ plant.name }}</a></h4>
