--- a/public/css/default.css
+++ b/public/css/default.css
@@ -37,7 +37,7 @@ h3 {
 /* THEME CUSTOMIZATION=================================================*/
 
 .main-content > h1 {
-    margin-left: 2rem;
+    /* margin-left: 2rem; */
 }
 
 #colorlib-main {
