--- a/templates/dashboard/plant/index.html.twig
+++ b/templates/dashboard/plant/index.html.twig
@@ -73,7 +73,7 @@
                         <span class="button"> {{ picture.getName }} </span>
                         //-->
 
-                        <figure  class="plant-thumbnail" style="background-image: url({{ asset('uploads/pictures/' ~ picture.file ) }})">
+                        <figure  class="plant-thumbnail">
                             <img src="{{ asset('uploads/pictures/' ~ picture.file ) }}" />
                         </figure>
                     {% endfor %}
