--- a/public/css/default.css
+++ b/public/css/default.css
@@ -33,8 +33,33 @@ h3 {
     font-size: 2rem;
 }
 
+.return {
+   display:flex ;
+   justify-content: flex-end;
+   margin-top: -5rem;
+   margin-bottom: 3rem;
+}
 
 /* THEME CUSTOMIZATION=================================================*/
+
+.colorlib-nav-toggle {
+    position: fixed !important;
+    z-index:1000;
+    
+    top: 0 !important;
+    right: 0 !important;
+
+    background-color: #fff3 !important;
+    padding: 0.3rem 0.5rem 0.5rem 0.5rem !important;
+    margin: 1rem 0 0 1rem  !important;
+    border: solid 1px var(--color-darkest);
+    
+    height: 3rem;
+    width: 3rem;
+    border-radius: 2rem;
+    backdrop-filter: sepia(1) blur(2px);
+    box-shadow: 2px 2px 2px #0005;
+}
 
 .main-content > h1 {
     /* margin-left: 2rem; */
@@ -149,7 +174,14 @@ main.main-content {
 
 
 form {
-    padding: calc(var(--spacing-default) * 3);
+    padding: 
+        calc(var(--spacing-default))
+        calc(var(--spacing-default))
+    ;
+
+    background-color: var(--color-light);
+    border-radius: var(--border-radius-default);
+    border: var(--border-default);
 }
 
 form img {
@@ -179,11 +211,11 @@ input, textarea {
     border-radius: 4px;
     padding:  var(--spacing-smallest);
     width: 100%;
-    margin-bottom: calc(var(--spacing-default) * 1.5);
+    margin-bottom: 0;
 }
 
 textarea {
-    min-height: 200px;
+    min-height: 100px;
 }
 
 /** Layout **/
@@ -211,42 +243,5 @@ textarea {
 }
 
 
-.sf-form  #picture_plants {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    text-align: center;
-}
-
-.sf-form  #picture_plants .choice {
-    display: inline-block;
-}
-
-.sf-form  #picture_plants .choice label {
-    cursor: pointer;
-    font-size: 1rem;
-    /* width: 50%; */
-    overflow: hidden;
-    border: solid 1px var(--color-medium-dark);
-    background-color: var(--color-medium-light);
-    display: inline-block;
-    border-radius: 0.5rem;
-    margin: 2px 2px;
-    padding: 0 0.5rem;
-    /* flex-grow: 1; */
-}
-
-.sf-form  #picture_plants .choice label:hover {
-    background-color: var(--color-medium);
-    box-shadow: 3px 3px 3px var(--color-medium-dark);
-}
-
-.sf-form  #picture_plants .choice label.checked {
-    background-color: var(--color-highlight);
-    
-}
-
-.sf-form  #picture_plants .choice input {
-    display: none;
-}
 
 
