--- a/templates/_partials/_head.html.twig
+++ b/templates/_partials/_head.html.twig
@@ -42,6 +42,7 @@
 
     <link rel="stylesheet" href="{{ asset('css/_components.css') }}"/> 
     <link rel="stylesheet" href="{{ asset('css/entities-list.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('css/picture-form.css') }}"/>
 
 
     
