--- a/templates/dashboard/_partials/_picture-new-form.html.twig
+++ b/templates/dashboard/_partials/_picture-new-form.html.twig
@@ -10,6 +10,6 @@
         {{ form_row(form.file) }} 
         {{ form_row(form.plants) }}
 
-        <button class="btn">{{ button_label|default('Update') }}</button>
+        <button class="button">{{ button_label|default('Update') }}</button>
     {{ form_end(form) }}
 </div>
