--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block body %}
+
+<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -15,8 +17,6 @@
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
@@ -36,7 +36,7 @@
         </label>
     </div> -->
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="button" type="submit">
         Sign in
     </button>
 </form>
