--- a/templates/_partials/_head.html.twig
+++ b/templates/_partials/_head.html.twig
@@ -36,11 +36,11 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/> 
     
-    <link rel="stylesheet" href="{{ asset('css/_variables.css') }}"/> 
-    <link rel="stylesheet" href="{{ asset('css/default.css') }}"/> 
-
-
+    {# CSS custom #}
+    <link rel="stylesheet" href="{{ asset('css/themes/_default.css') }}"/>
     <link rel="stylesheet" href="{{ asset('css/_components.css') }}"/> 
+
+    <link rel="stylesheet" href="{{ asset('css/default.css') }}"/> 
     <link rel="stylesheet" href="{{ asset('css/entities-list.css') }}"/>
     <link rel="stylesheet" href="{{ asset('css/picture-form.css') }}"/>
 
