--- a/templates/_partials/components/_header.html.twig
+++ b/templates/_partials/components/_header.html.twig
@@ -20,8 +20,7 @@
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
                 <p class="breadcrumbs">
-                    <span class="mr-2"><a href="{{ path('dashboard_profile') }}">Go to my profile</a></span>
-                    <span><a href="{{ path('dashboard_plants') }}">See my plants</a></span>
+                    Tracking plants with ease. 
                 </p>
             {% endif %}
                                             
