--- a/templates/dashboard/_partials/_picture-edit-form.html.twig
+++ b/templates/dashboard/_partials/_picture-edit-form.html.twig
@@ -1,5 +1,9 @@
-<div class="sf-form">
-{{ form_start(form) }}
+<div>
+    {{ form_start(form, {
+        'attr': {
+            'class': 'sf-form'
+        }
+    }) }}
     {{ form_row(form.name) }}
     {{ form_row(form.description) }}
     {{ form_row(form.date) }}
