--- a/templates/dashboard/picture/show.html.twig
+++ b/templates/dashboard/picture/show.html.twig
@@ -15,52 +15,31 @@
 
 {% block body %}
     {% set route_parameters = app.request.attributes.get('_route_params') %}    
-    
+
+    <div class="return">
+        <a class="button" href="{{ path('dashboard_plant_pictures', {'plantId' : selectedPlant.id}) }}">Back to {{selectedPlant.name}} photos</a>
+    </div>
+
     <h1>Picture of {{selectedPlant.name}}</h1>
     {# mettre directement la photo, ou le nom s'il y en a un ?  #}
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Name</th>
-                <td>{{ picture.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ picture.description }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ picture.date ? picture.date|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>File</th>
-                <td><img src="{{ asset('uploads/pictures/' ~ picture.file ) }}"/></td>
-            </tr>
-            <tr>
-                <th>Like_counter</th>
-                <td>{{ picture.likeCounter }}</td>
-            </tr>
-            
-            <tr>
-                {#LATER VIEW PICTURE afficher uniquement quand il y a plus d'une plante sur la photo :  #}
-                <th>Other plants in this picture</th>
-                <td>
-                    {% for plant in picture.plants %}
-                        {% if (plant.id != selectedPlant.id) %}
-                            <a href="{{ path('dashboard_plant_pictures', {'plantId' : plant.id}) }}">{{ plant.name }}</a>
-                        {% endif %}
-                    {% endfor %}
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    
-    <br>
-    <a class="button" href="{{ path('dashboard_plant_pictures', {'plantId' : selectedPlant.id}) }}">back to {{selectedPlant.name}} photos</a>
-    
-    <a class="button" href="{{ path('dashboard_picture_edit', {'plantId' : selectedPlant.id, 'id': picture.id}) }}">edit infos</a>
- 
-    {{ include('dashboard/_partials/_picture-delete-form.html.twig') }}
+
+    <div class="card">
+        <img class="card-img-top" src="{{ asset('uploads/pictures/' ~ picture.file ) }}" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">{{ picture.name }}</h5>
+            <div style="text-align: left;">
+                {{ picture.date ? picture.date|date('Y-m-d') : '' }}
+            </div>
+          <p class="card-text">{{ picture.description }}</p>
+
+          <div style="text-align: right">
+                <a class="button" href="{{ path('dashboard_picture_edit', {'plantId' : selectedPlant.id, 'id': picture.id}) }}">Edit photo</a>
+            {{ include('dashboard/_partials/_picture-delete-form.html.twig') }}
+            </div>
+
+        </div>
+      </div>
+
 
 {% endblock %}
